# kaggle-mall-customer-segmentation

./: index.ipynb  pyproject.toml  readme.md
