[tool.poetry]
name = "vjchoudhary7-mall-customer-segmentation"
version = "0.1.0"
description = ""
authors = ["Roman Glushko <roman.glushko.m@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
