[tool.poetry]
name = "vjchoudhary7-mall-customer-segmentation"
version = "0.1.0"
description = ""
authors = ["Roman Glushko <roman.glushko.m@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
ipykernel = "^5.4.3"
numpy = "^1.19.5"
scipy = "^1.6.0"
seaborn = "^0.11.1"
pandas = "^1.2.0"
matplotlib = "^3.3.3"
plotly = "^4.14.3"
nbformat = "^5.1.2"
scikit-learn = "^0.24.1"
yellowbrick = "^1.3.post1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
